<resources>
    <string name="app_name">stasis</string>
    <string name="empty_value">-</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_version">Version %1$s</string>
    <string name="license_header">This project is licensed under the Apache License, Version 2.0</string>
    <string name="license_copyright">Copyright 2018 https://github.com/sndnv</string>
    <string name="license_info">
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_footer">
        For more information, visit
        \n
        https://github.com/sndnv/stasis
    </string>
    <string name="navigation_item_home_first_time_hint_title">Navigation</string>
    <string name="navigation_item_home_first_time_hint_description">
        You can get started by opening the navigation menu and exploring the various sections of the app.
    </string>
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_backup">Backup</string>
    <string name="navigation_item_recover">Recover</string>
    <string name="navigation_item_search">Search</string>
    <string name="navigation_item_operations">Operations</string>
    <string name="navigation_item_status">Status</string>
    <string name="navigation_item_rules">Rules</string>
    <string name="navigation_item_schedules">Schedules</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_about">About</string>
    <string name="navigation_item_logout">Logout</string>
    <string name="navigation_subtitle_home">Home</string>
    <string name="navigation_subtitle_backup_definitions">Backup definitions</string>
    <string name="navigation_subtitle_backup_definition_details">Backup definition details</string>
    <string name="navigation_subtitle_backup_entry_details">Backup entry details</string>
    <string name="navigation_subtitle_backup_definition_form">Configure backup definition</string>
    <string name="navigation_subtitle_recover">Recover</string>
    <string name="navigation_subtitle_search">Search</string>
    <string name="navigation_subtitle_operations">Operations</string>
    <string name="navigation_subtitle_operation_details">Operation details</string>
    <string name="navigation_subtitle_status">Status</string>
    <string name="navigation_subtitle_rules">Rules</string>
    <string name="navigation_subtitle_schedules">Schedules</string>
    <string name="navigation_subtitle_settings">Settings</string>
    <string name="navigation_subtitle_about">About</string>
    <string name="confirmation_dialog_ok_button_title">OK</string>
    <string name="confirmation_dialog_cancel_button_title">Cancel</string>
    <string name="active_restrictions_button_hint">One or more restrictions are currently active</string>
    <string name="active_restrictions_dialog_title">Active Restrictions</string>
    <string name="active_restrictions_dialog_content">One or more restrictions are currently active that impact operations:\n\n%1$s\n\nIf these restrictions can be safely ignored, go to \"Settings\" > \"Advanced\" to override this behaviour.</string>
    <string name="operation_restriction_no_connection">no network connection</string>
    <string name="operation_restriction_no_connection_hint">- No network connection - the device is not connected to a network</string>
    <string name="operation_restriction_limited_network">restricted or metered network</string>
    <string name="operation_restriction_limited_network_hint">- Restricted or metered network - the device is connected to a network that may incur additional charges for large data transfers</string>
    <string name="debug_mode_button_hint">Debug Mode Enabled</string>
    <string name="debug_mode_dialog_title">Debug Mode Enabled</string>
    <string name="debug_mode_dialog_content">The application is running in debug mode and is connected to a server.</string>
    <string name="mock_mode_button_hint">Mock Mode Enabled</string>
    <string name="mock_mode_dialog_title">Mock Mode Enabled</string>
    <string name="mock_mode_dialog_content">The application is running in mock mode; there is no connection to a server and many features will not work as expected.</string>
    <string name="unreachable_servers_button_hint">Unreachable Servers</string>
    <string name="unreachable_servers_dialog_title">Unreachable Servers</string>
    <string name="unreachable_servers_list_item">%1$s (last seen: %2$s)</string>
    <string name="permissions_missing_button_hint">No or insufficient permissions</string>
    <string name="permissions_field_content_info">%1$s</string>
    <string name="permissions_field_content_details">%1$s</string>
    <string name="permissions_read_media_audio_name">Read media - audio</string>
    <string name="permissions_read_media_audio_hint">Provides access to user audio files (required)</string>
    <string name="permissions_read_media_images_name">Read media - images</string>
    <string name="permissions_read_media_images_hint">Provides access to user images (required)</string>
    <string name="permissions_read_media_video_name">Read medio - video</string>
    <string name="permissions_read_media_video_hint">Provides access to user videos (required)</string>
    <string name="permissions_post_notifications_name">Post notifications</string>
    <string name="permissions_post_notifications_hint">Allows notifications to be shown (optional)</string>
    <string name="permissions_read_external_storage_name">Read external storage</string>
    <string name="permissions_read_external_storage_hint">Provides access to read user files (required)</string>
    <string name="permissions_write_external_storage_name">Write external storage</string>
    <string name="permissions_write_external_storage_hint">Provides access to write user files (required)</string>
    <string name="permissions_manage_external_storage_name">Manage external storage</string>
    <string name="permissions_manage_external_storage_hint">Provides access to manage user files (required)</string>
    <string name="permissions_read_calendar_name">Read calendar</string>
    <string name="permissions_read_calendar_hint">Provides access to read calendar events (optional)</string>
    <string name="permissions_write_calendar_name">Write calendar</string>
    <string name="permissions_write_calendar_hint">Allows restoring calendar events (optional)</string>
    <string name="permissions_read_contacts_name">Read contacts</string>
    <string name="permissions_read_contacts_hint">Provides access to read contacts (optional)</string>
    <string name="permissions_write_contacts_name">Write contacts</string>
    <string name="permissions_write_contacts_hint">Allows restoring contacts (optional)</string>
    <string name="permissions_unrecognized_hint">-</string>
    <string name="permissions_title">Application permissions</string>
    <string name="permissions_section_essential">Essential</string>
    <string name="permissions_section_optional">Optional</string>
    <string name="permissions_request_button_request_action_text">Request</string>
    <string name="permissions_request_button_request_action_hint">Request missing permissions</string>
    <string name="permissions_request_button_close_action_text">Close</string>
    <string name="permissions_request_button_close_action_hint">Close permissions dialog</string>
    <string name="permissions_granted_hint">Denotes if the permission has been granted or not</string>
    <string name="permissions_general_hint">
        Backup and recovery operations require broad access to files stored on this device.\n\n
        The application will continue to function without the required permissions but its core features will not be available.\n\n
        To enable full functionality, the following permissions need to be granted:
    </string>
    <string name="permissions_dialog_not_shown_hint">Permissions request not shown</string>
    <string name="permissions_dialog_not_shown_info">
        If one or more of the required permissions have been denied in the past, it is possible that the request dialog is no longer shown.\n\n
        To allow the necessary access, go to the system settings for the application and make the appropriate changes to the permissions there.
    </string>
    <string name="permissions_dialog_not_shown_button_hint">Open Settings</string>
    <string name="cache_statistics_title">Cache statistics</string>
    <string name="context_help_first_time_hint_title">Help</string>
    <string name="context_help_first_time_hint_description">
        In case something is unclear, more information can be found by tapping on this button.
    </string>
    <string name="context_help_button_hint">Help</string>
    <string name="context_help_dialog_title">Help</string>
    <string name="bootstrap_logo">Application logo</string>
    <string name="bootstrap_intro_title">Device Bootstrap</string>
    <string name="bootstrap_intro_content">The application will now guide you through the steps necessary to (re-)initialize this device.</string>
    <string name="bootstrap_intro_next_button">Next</string>
    <string name="bootstrap_provide_username_step">2/5</string>
    <string name="bootstrap_server_prefix">https://</string>
    <string name="bootstrap_server_hint">Bootstrap Server URL</string>
    <string name="bootstrap_server_next_button">Next</string>
    <string name="bootstrap_username_hint">User</string>
    <string name="bootstrap_username_previous_button">Back</string>
    <string name="bootstrap_username_next_button">Next</string>
    <string name="login_more_options_title">More options</string>
    <string name="login_reencrypt_secret_title">Re-encrypt device secret</string>
    <string name="login_reencrypt_secret_content">If your password was changed on a different device, this allows decrypting the secret of this device using the old password and re-encrypting it using the new one.</string>
    <string name="login_bootstrap_title">Re-initialize device</string>
    <string name="login_bootstrap_content">Allows re-running the bootstrap process for this device.</string>
    <string name="login_reset_password_title">Reset user password</string>
    <string name="login_reset_password_content">You can reset your password after logging in or, if that\'s not possible, contact your system administrator.</string>
    <string name="login_more_options_cancel_button_title">Close</string>
    <string name="crash_report_message">The application encountered a problem and will now stop</string>
    <string name="crash_report_description">Unrecoverable error</string>
    <string name="crash_report_more_info"><u>More information</u></string>
    <string name="settings_category_date_time">Date/Time</string>
    <string name="settings_category_debug">Debug</string>
    <string name="settings_date_time_format_title">Format</string>
    <string name="settings_scheduling_enabled_title">Enable operation scheduling</string>
    <string name="settings_ping_interval_title">Server ping interval</string>
    <string name="settings_reset_config_title">Reset configuration</string>
    <string name="settings_reset_config_summary">Clears the client\'s configuration and device secret</string>
</resources>