<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/active_restrictions"
        android:contentDescription="@string/debug_mode_button_hint"
        android:icon="@drawable/ic_restrictions"
        android:title="@string/debug_mode_button_hint"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/debug_mode"
        android:contentDescription="@string/debug_mode_button_hint"
        android:icon="@drawable/ic_debug"
        android:title="@string/debug_mode_button_hint"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/mock_mode"
        android:contentDescription="@string/mock_mode_button_hint"
        android:icon="@drawable/ic_mock"
        android:title="@string/mock_mode_button_hint"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/unreachable_servers"
        android:contentDescription="@string/unreachable_servers_button_hint"
        android:icon="@drawable/ic_warning"
        android:title="@string/unreachable_servers_button_hint"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/context_help"
        android:contentDescription="@string/context_help_button_hint"
        android:icon="@drawable/ic_info"
        android:title="@string/context_help_button_hint"
        app:showAsAction="always" />
</menu>
