<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/crash_report_description"
        android:padding="8dp"
        android:src="@drawable/ic_warning" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="56dp"
        android:paddingVertical="8dp"
        android:text="@string/crash_report_message"
        android:textAppearance="?attr/textAppearanceTitleMedium" />

    <TextView
        android:id="@+id/crash_report_more_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/crash_report_more_info" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/crash_report_termination_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:progress="100" />

</LinearLayout>
