<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:contentDescription="@string/bootstrap_logo"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@id/bootstrap_provide_server_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/bootstrap_provide_server_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bootstrap_provide_server"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:endIconMode="clear_text"
                app:prefixText="@string/bootstrap_server_prefix"
                app:startIconCheckable="true"
                app:startIconDrawable="@drawable/ic_warning">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bootstrap_provide_server_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bootstrap_server_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bootstrap_provide_server_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/bootstrap_server_next_button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
